// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  Viewing 
  3
   
  expenses
   totalling:
  $1,141.95
</div>
`;

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  Viewing 
  1
   
  expense
   totalling:
  $2.34
</div>
`;

exports[`should correctly render ExpensesSummary with no expenses 1`] = `
<div>
  Viewing 
  0
   
  expenses
   totalling:
  $0.00
</div>
`;
